// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentTest render expanded with content-class-name 1`] = `
<div
  className=""
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsible"
    iconProps={
      Object {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content-class-name collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentTest render expanded without content-class-name 1`] = `
<div
  className=""
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsible"
    iconProps={
      Object {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentTest render with container-class-name 1`] = `
<div
  className="a-container"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsible"
    iconProps={
      Object {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentTest render without container-class-name 1`] = `
<div
  className=""
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsible"
    iconProps={
      Object {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: collapsed 1`] = `
<div
  className=""
>
  <CustomizedActionButton
    aria-expanded={false}
    className="collapsible"
    iconProps={
      Object {
        "iconName": "ChevronRight",
      }
    }
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
</div>
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: expanded 1`] = `
<div
  className=""
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsible"
    iconProps={
      Object {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;
